--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,21 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+
+# Disable Directory Listing 
+Options -Indexes
+
+# block files which needs to be hidden // in here specify .example extension of the file 
+<Files ~ "\.(git|env|json|config.js|md|gitignore|gitattributes|lock|example)$">
+    Order allow,deny
+    Deny from all
+</Files>
+
+# in here specify full file name spectator '|'
+<Files ~ "(artisan)$">
+    Order allow,deny
+    Deny from all
+</Files>
+
+
